--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
 </head>
 
 <body>
-
 	<section id="cover">
 
 		<video class="fullscreen canvas-center" playsinline="" autoplay="" muted="" loop="">
@@ -29,10 +28,7 @@
 
 		<div id="intro">
 			<h1>2020 Oregon Wildfires</h1>
-			<h5>Connor Hynes</h5>
-			<p>This section shows where active research is happening, and on what topics to communicate on-going nature
-				of scientific learning. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula
-				Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc.</p>
+			<h5>By Connor Hynes</h5>
 		</div>
 	</section>
 	<section id="geonarrative">
@@ -43,7 +39,7 @@
 			<img src = "assets/img/oregon_map.PNG">
 		</article>
 		<article class="scene" data-scene="1">
-			<h2>Wildire Risk</h2>
+			<h2>Wildfire Risk</h2>
 			<p>
 				<br>Oregon has seen an increase in fire danger for many years, with previous notable wildfires occurring in 2018, 2012, and 2002.
 				The map to the left shows the overall wildfire danger throughout all of Oregon,
@@ -94,16 +90,24 @@
 		</article>
 		<article class="scene" data-scene="2">
 			<h2>Structual Damage</h2>
+			<p>
+				<br> From the over 1 million acres of land that were burned, many homes and other structure were as well. As of October, 2020 the total count of homes destroyed
+				was at least 4,009. The fires also claimed the lives of 9 individuals. Some of the largest impacted counties include Jackson, which had 2,364 homes destroyed, 
+				followed by Marion County with 629, and Lane County with 463. Wildfire relief was made avaliable for those effected by the fires, offering financial aid.  
+				<br><br><br> Recently, two lawsuits were filed against Oregon power comapnies, which blame them for the damage that was caused by the Beachie Creek fire.
+				This fire burned 1,300 structures and killed at least 8 people. The lawsuit claims that the company PacifiCorp had outdated infrastructure which was damaged by 
+				high winds that they knownly ignored advisories over and failed to cut power to the area, resulting in downed powerlines starting major fires. It is claimed that 
+				"The Beachie Creek fire could have been prevented had PacifiCorp properly maintained its equipment or instituted a public safety power outage (i.e., de-energizing),"
+				the lawsuits say. "Instead, PacifiCorp kept its improperly maintained power lines energized even after receiving a multitude of warnings days before high winds toppled
+				its improperly maintained electric infrastructure". This is just one of the ways that Oregon residents are seeking to rebuild after the crippling fires of 2020. <br><br><br>
+				To the right are two interactive images which display the destruction of these fires on residential areas in Oregon.
+			</p>	
 		</article>
 		  <article class="scene fullscreen" data-scene="6">
 			<h2>Thank You For Your Time</h2>
-		  </article>
-		
+		  </article>		
 	</section>
-
-
 	<script src="js/main.js"></script>
-
 </body>
 
 </html>
